-------------------------------------
	4.1-5	
-------------------------------------
Fixed bug that would not set Acceleration options for a VM if the
$enableAdvancedConfig option was not set in config.php

-------------------------------------
	4.1-4	2011-10-17
-------------------------------------
$vmMemoryOffset if configured, is now displayed in yellow(-ish) in
the host memory usage graph.
http://code.google.com/p/phpvirtualbox/issues/detail?id=414

Fixed bug that would throw a VirtualBox error when cloning the
"Current State" item of a virtual machine on the Snapshot tab.

Fixed regression bug that would show all USB devices as being
attached to the selected VM in the USB Devices section of the
Settings toolbar menu.

Fixed bug that would cause an error when "USB Devices" was clicked
in the Settings toolbar menu.

Minor UI changes.

Fixed Export Appliance wizard so that it now displays the correct
Export Appliance instructions rather than the Import Appliance
wizard instructions.

Added $enableHDFlushConfig configuration setting. For more info
see "Responding to guest IDE/SATA flush requests" at:
http://www.virtualbox.org/manual/ch12.html#idp12757424

Added workaround for http://www.virtualbox.org/ticket/9255. Taking
a snapshot of a running VM now prompts to pause the VM. This check
was added in 4.1-3, now however it no longer verifies the
VirtualBox version. 4.1-3 assumed this would be fixed in
VirtualBox versions > 4.1.2.

Added support for network adapter "Generic Properties" when the
Generic Driver adapter type is selected.

Added Doxygen style comments to PHP and JavaScript files.

Added Chinese translation.

-------------------------------------
	4.1-3	2011-9-20
-------------------------------------
Added Polish translation.

Fixed 4.1-0 regression bug that would not allow runtime attachment
of USB devices from the Settings menu in the toolbar.

Fixed 4.1-1 regression bug that would not allow one to edit
existing USB filters for a running VM.
